Fix main slider overflow hidden bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -146,6 +146,7 @@ body {
 
 .footer-menu-mobile {
     padding: 30px 15px 100px 30px;
+    background-color: var(--white);
 }
 
 .footer-menu-mobile > a {
@@ -219,6 +220,8 @@ body {
 
 .main-slider {
     width: 100vw;
+    overflow-x: hidden;
+    background-color: var(--bg-dark);
 }
 
 .slider-container {
@@ -254,7 +257,7 @@ body {
     overflow: hidden;
     background-color: var(--bg-dark);
     transition: all 400ms ease-in-out;
-    position: absolute;
+    position: relative;
     top: 0;
     opacity: 0;
 }
@@ -262,10 +265,12 @@ body {
 .slide.active {
     opacity: 1;
     transform: translateX(0) !important;
+    position: absolute;
 }
 
 .slide.toRight {
     transform: translateX(80px);
+
 }
 
 .slide.toLeft {
